api/k8s/base/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: markethub
spec:
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
